# perception-app

./: CMakeLists.txt  README.md
config/: app.json  camera.yaml  lidar.yaml
src/: main.cpp
